# InnovateNow

./: .gitignore  AGENTS.md  AGENT_HANDOFF.md  AGENT_TASK_LOG.md  CONTEXT.md  Makefile  README.md  main.py  pyproject.toml  temp.txt
agent-files/: AGENT_HANDOFF.md  AGENT_TASK_LOG.md  CONTEXT.md
data/: cinder_home_goods_products.csv  cinder_home_goods_queries.csv  haven_support_knowledge.json  internal_knowledge_documents.json  northstar_relay_dataset_audit.json  northstar_relay_standardized_conversations.jsonl  northstar_relay_support_records.csv  product_catalog.json  qdrant_sample_documents.json
docs/: alpenglow-assist-finetuning.md  cinder-hybrid-search-inputs-audit.md  cinder-hybrid-search.md  document-embeddings.md  haven-support-bot.md  northstar-relay-finetuning-dataset.md  pdf-qa-tool.md  product-semantic-search.md  qdrant-search-and-database.md  qdrant-semantic-search.md  voice-assistant.md
frontend/: README.md  index.html  package-lock.json  package.json  rspack.config.cjs
issues/: 001-protect-env-config.md  006-create-few-shot-prompt-template.md  007-build-marketing-ai-prompt-library.md  008-add-llm-streaming-api-endpoint.md  009-build-creativecanvas-ai-image-generator.md  010-build-ai-voice-assistant-prototype.md  011-build-document-embeddings-foundation.md  012-deploy-qdrant-vector-database-semantic-search.md  013-add-semantic-product-search-api.md  014-build-pdf-qa-tool.md  015-audit-cinder-hybrid-search-inputs.md  016-prepare-northstar-relay-finetuning-dataset.md  017-finetune-alpenglow-assist-support-model.md  README.md
tests/: test_image_api.py  (+23 more)
(+110 files in other folders)
