[project]
name = "task-learn-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.0",
    "numpy>=2.0.0",
    "pypdf>=6.13.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.12.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
